[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://assets/views/overhead-view.jpg" type="Texture" id=2]
[ext_resource path="res://assets/raw/title.jpg" type="Texture" id=3]
[ext_resource path="res://font_small.tres" type="DynamicFont" id=4]


[node name="options_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Sprite" parent="."]
modulate = Color( 0.0156863, 0.105882, 0.168627, 1 )
position = Vector2( 477.828, 312.577 )
scale = Vector2( 0.639999, 0.639999 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="title" type="Sprite" parent="."]
position = Vector2( 521.238, 52.983 )
texture = ExtResource( 3 )

[node name="g_music_options" type="Node" parent="."]

[node name="lbl_music_volume" type="Label" parent="g_music_options"]
margin_left = 108.83
margin_top = 163.245
margin_right = 416.83
margin_bottom = 192.245
custom_fonts/font = ExtResource( 4 )
text = "Music Volume"

[node name="lbl_music_volume_value" type="Label" parent="g_music_options/lbl_music_volume"]
margin_left = 681.613
margin_top = 1.71472
margin_right = 721.613
margin_bottom = 30.7147
custom_fonts/font = ExtResource( 4 )

[node name="sld_music_volume" type="HSlider" parent="g_music_options"]
margin_left = 443.0
margin_top = 149.0
margin_right = 754.0
margin_bottom = 203.0
rect_scale = Vector2( 1, 0.96263 )
min_value = -24.0
max_value = 0.0
ticks_on_borders = true

[node name="g_ambience_volume" type="Node" parent="."]

[node name="lbl_ambience_volume" type="Label" parent="g_ambience_volume"]
margin_left = 22.4034
margin_top = 213.107
margin_right = 417.403
margin_bottom = 242.107
custom_fonts/font = ExtResource( 4 )
text = "Ambience Volume"

[node name="lbl_ambience_volume_value" type="Label" parent="g_ambience_volume/lbl_ambience_volume"]
margin_left = 745.879
margin_top = 1.71472
margin_right = 785.879
margin_bottom = 30.7147
custom_fonts/font = ExtResource( 4 )

[node name="sld_ambience_volume" type="HSlider" parent="g_ambience_volume"]
margin_left = 444.108
margin_top = 198.861
margin_right = 755.108
margin_bottom = 252.861
rect_scale = Vector2( 1, 0.96263 )
min_value = -24.0
max_value = 0.0
ticks_on_borders = true
[connection signal="value_changed" from="g_music_options/sld_music_volume" to="." method="_on_sldMusicVolume_value_changed"]
[connection signal="value_changed" from="g_ambience_volume/sld_ambience_volume" to="." method="_on_sld_ambience_volume_value_changed"]
